# cafe_count

./: .gitignore  DEPLOYMENT.md  LICENSE  MANIFEST.in  README.md  build.bat  build.sh  deployment-checklist.md  main.py  pyproject.toml  requirements.txt  setup.py  네이버카페댓글수집기_터미널.spec  네이버카페댓글수집기.spec
.github/workflows/: build-executables.yml  publish-to-pypi.yml
backup/: EXE_생성_가이드.md  작업_완료_요약.md
starwargez_comment_collector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
